# graphicslab

./: .gitignore  .gitmodules  LICENSE.txt  README.md  flake.nix  pyproject.toml
assets/: cube.ply
assets/example_shader/: frag.glsl  vert.glsl
notebooks/: trimesh_playground.ipynb
src/graphicslab/: __main__.py  app.py  camera.py  consts.py  events.py  window.py
src/graphicslab/about/: window.py
src/graphicslab/assets/shaders/default/: frag.glsl
src/graphicslab/assets/shaders/normal/: frag.glsl
src/graphicslab/assets/shaders/wire_frame/: frag.glsl  vert.glsl
src/graphicslab/demo/: line.py  triangle.py
src/graphicslab/demo/shaders/triangle/: vert.glsl
src/graphicslab/dockspace/: status.py  window.py
src/graphicslab/lib/: mesh_loader.py  shader.py
src/graphicslab/mesh_viewer/: camera_control_window.py  shading_control_window.py  viewport.py  window.py
src/graphicslab/settings/: decorator.py  settings.py  utils.py  window.py
src/moderngl_playground/: __main__.py  app.py  fbo_stack.py  line.py  square.py  window.py
src/moderngl_playground/about/: window.py
src/moderngl_playground/assets/shaders/default/: frag.glsl  vert.glsl
src/moderngl_playground/assets/shaders/error/: frag.glsl  vert.glsl
src/moderngl_playground/demo/: mesh_viewer.py
src/moderngl_playground/demo/shaders/mesh_viewer/: frag.glsl  vert.glsl
src/moderngl_playground/demo/shaders/triangle/: frag.glsl
src/moderngl_playground/dockspace/: window.py
src/moderngl_playground/mesh_viewer/: window.py
src/moderngl_playground/settings/: settings.py  utils.py  window.py
src/moderngl_playground/shaders/: square.glsl
