[project]
name = "moderngl_playground"
version = "0.1.0"
description = "A playground project for python moderngl library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moderngl-window>=3.0.3",
    "moderngl>=5.12.0",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "debugpy>=1.8.11",
]

[project.scripts]
start = "moderngl_playground.__main__:main"
square = "moderngl_playground.square:main"
line = "moderngl_playground.line:main"
