[project]
name = "moderngl_playground"
version = "0.1.0"
description = "A playground project for python moderngl library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moderngl-window>=3.0.3",
    "moderngl>=5.12.0",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "pyglm>=2.7.3",
    "trimesh[easy]>=4.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "debugpy>=1.8.11",
    "jupyterlab>=4.3.3",
]

[tool.licensecheck]
using = "PEP631"

[project.scripts]
start = "moderngl_playground.__main__:main"
square = "moderngl_playground.demo.square:main"
line = "moderngl_playground.demo.line:main"
triangle = "moderngl_playground.demo.triangle:main"
mesh-viewer = "moderngl_playground.demo.mesh_viewer:main"
