[project]
name = "moderngl_playground"
version = "0.1.0"
description = "A playground project for python moderngl library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "dataclasses-json>=0.6.7",
    "imgui-bundle>=1.6.1",
    "moderngl-window[imgui]>=3.0.3",
    "moderngl>=5.12.0",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "py-observer",
    "pyglm>=2.7.3",
    "trimesh[easy]>=4.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "debugpy>=1.8.11",
    "jupyterlab>=4.3.3",
]

[tool.licensecheck]
using = "PEP631"

[tool.uv.sources]
py-observer = { git = "https://github.com/fangjunzhou/python-observer" }

[project.scripts]
start = "moderngl_playground.__main__:main"
